@@ -427,6 +427,15 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP2770  (EXPERIMENTAL)(*2)
        Canon PIXMA iP2772  (EXPERIMENTAL)(*2)
        Canon PIXMA iP2780  (EXPERIMENTAL)(*2)
+
+       Canon iX6500 series (EXPERIMENTAL)(*1)
+       Canon PIXMA iX6510  (EXPERIMENTAL)(*2)
+       Canon PIXMA iX6520  (EXPERIMENTAL)(*2)
+       Canon PIXUS iX6530  (EXPERIMENTAL)(*2)
+       Canon PIXMA iX6540  (EXPERIMENTAL)(*2)
+       Canon PIXMA iX6550  (EXPERIMENTAL)(*2)
+       Canon PIXMA iX6560  (EXPERIMENTAL)(*2)
+       Canon PIXMA iX6580  (EXPERIMENTAL)(*2)
 			   
        Canon MX390 series  (EXPERIMENTAL)
        Canon PIXMA MX391   (EXPERIMENTAL)(*2)
